change variable names

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafío 1 - JavaScript</title>
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="./src/assets/css/styles.css">
 </head>
 
 <body>
@@ -15,12 +15,12 @@
     <div class="card">
       <div class="img-card"></div>
       <h6>Laptop Gamer AMD</h6>
-      <p>Precio base: $<span class="precio-inicial"></span> </p>
+      <p>Precio base: $<span class="initial-price"></span> </p>
 
       <p>Cantidad:
-        <span class="cantidad">0</span>
-        <button>+</button>
-        <button>-</button>
+        <span class="quantity">0</span>
+        <button id="increment-btn">+</button>
+        <button id="decrement-btn">-</button>
       </p>
     </div>
 
@@ -28,10 +28,10 @@
   </section>
 
   <div class="total-section">
-    <p>Total a pagar: $<span class="valor-total"></span> </p>
+    <p>Total a pagar: $<span class="total-price"></span> </p>
   </div>
 
-  <script src="index.js">
+  <script src="src/assets/js/app.js">
 
 
   </script>
